--- a/newform.html
+++ b/newform.html
@@ -3,25 +3,34 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Ajax form</title>
+	<link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
+
+
+
 </head>
 <body>
 
 	<form id="myForm" onsubmit="return false;" >
 		Query:<br>
-		<input type="text" name="query" value="">
-		<br>
-		<button id="sendButton">Send Data</button>
+		<input class="w3-input" type="text" name="query" value=""><br>
+		<button class="w3-btn w3-black" id="sendButton">Send Data</button>
 	</form>
-
-	<div id="treeList">
+<div class="w3-row">
+	<div class="w3-col s6" style="margin-left: 20%">
+	<div class="" id="TweetList">
+		<div class="w3-panel w3-light-grey w3-round">
+		<p><img src="">
+		<font style="color: black" size="4">UserName</font>  <font style="color: grey" size="3">@ScreenName .</font>  <font style="color: grey" size="3">created_at</font></p>
+		<p><font style="color: black" size="5">Text</font></p>
+		<p><a href="*" class="link"><font size="4">#hashtags</font></a></p>
+		</div>
 	</div>
+	</div>
+</div>	
 
 
-	response here: <p id="lblResponse">fill me in</p>
-
-
-	<script type="text/javascript">
+		<script type="text/javascript">
 
 		function sendAjaxQuery(url, data) {
 			$.ajax({
@@ -33,44 +42,37 @@
 					var ret = JSON.stringify(data);
 
 					var twit = JSON.parse(ret).statuses;
-					// $('#lblResponse').html(twit[0].created_at);
-						// // $('#lblResponse').html(ret);
-						// console.log('Success: ')
 
-						// for(var i=0,l=twit.length;i<l;i++){
+					$("#TweetList").empty();
 
-						// 		document.write(i+':'+twit[i].created_at + '<br>');
+					initTable();
+					function initTable () {
+						var html = '<table border=1>';
+						for(var i=0,l=twit.length;i<l;i++){
+							var obj = twit[i];
+							html += '<div class="w3-panel w3-light-grey w3-round w3-border">'
+							// html += '<p>' + obj.created_at + '</p>';
 
-						// }
+							html += '<p><font style="color: black" size="5">Author: </font><a class="w3-btn"  href="https://twitter.com/' + obj.user.screen_name + '"><img src="' + obj.user.profile_image_url + '"><font style="color: black" size="5"> ' + obj.user.name + '</font>  <font style="color: grey" size="4">' + '@' + obj.user.screen_name + '. </font></a>  <font style="color: black" size="3"> Date: </font><font style="color: grey" size="3">' + obj.created_at + '</font></p>'
 
-						initTable();
-						function initTable () {
-							var html = '<table border=1>';
-							for(var i=0,l=twit.length;i<l;i++){
-								var obj = twit[i];
-								html += '<tr>'
-								html += '<td>' + obj.created_at + '</td>';
-								html += '<td>' + obj.id + '</td>';
-								html += '</tr>'
-							}
-							html += '</table>';
+							// html += '<p>' + obj.user.screen_name + '</p>';
 
-							$('#treeList').append(html);
+							html += '<p><font style="color: black" size="5"> Tweet: ' + obj.text + '</font></p>'
+
+							html += '<p><a href="*" class="link"><font size="4">' + obj.entities.hashtags + '</font></a></p>'
+
+							html += '</div>'
 						}
+						html += '</table>';
 
-
-
-
-
-
-
-
-					},
-					error: function (xhr, status, error) {
-						console.log('Error: ' + error.message);
-						$('#lblResponse').html('Error connecting to the server.');
-					},
-				});
+						$('#TweetList').append(html);
+					}
+				},
+				error: function (xhr, status, error) {
+					console.log('Error: ' + error.message);
+					$('#lblResponse').html('Error connecting to the server.');
+				},
+			});
 		}
 
 
