--- a/newform.html
+++ b/newform.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
 
-
+	<style type="text/css">
+		.w3-panel:hover{box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
+	</style>
 
 </head>
 <body>
@@ -16,21 +18,14 @@
 		<input class="w3-input" type="text" name="query" value=""><br>
 		<button class="w3-btn w3-black" id="sendButton">Send Data</button>
 	</form>
-<div class="w3-row">
-	<div class="w3-col s6" style="margin-left: 20%">
-	<div class="" id="TweetList">
-		<div class="w3-panel w3-light-grey w3-round">
-		<p><img src="">
-		<font style="color: black" size="4">UserName</font>  <font style="color: grey" size="3">@ScreenName .</font>  <font style="color: grey" size="3">created_at</font></p>
-		<p><font style="color: black" size="5">Text</font></p>
-		<p><a href="*" class="link"><font size="4">#hashtags</font></a></p>
+	<div class="w3-row">
+		<div class="w3-col s6" style="margin-left: 20%">
+			<div class="" id="TweetList"></div>
 		</div>
-	</div>
-	</div>
-</div>	
+	</div>	
 
 
-		<script type="text/javascript">
+	<script type="text/javascript">
 
 		function sendAjaxQuery(url, data) {
 			$.ajax({
@@ -47,19 +42,21 @@
 
 					initTable();
 					function initTable () {
-						var html = '<table border=1>';
+						var html = '<table border=0>';
 						for(var i=0,l=twit.length;i<l;i++){
 							var obj = twit[i];
-							html += '<div class="w3-panel w3-light-grey w3-round w3-border">'
+							html += '<div class=" w3-panel w3-light-grey w3-round w3-border" onclick="openpage(\'https://twitter.com/' + obj.user.screen_name + '/status/' + obj.id_str + ' \')" >'
 							// html += '<p>' + obj.created_at + '</p>';
 
-							html += '<p><font style="color: black" size="5">Author: </font><a class="w3-btn"  href="https://twitter.com/' + obj.user.screen_name + '"><img src="' + obj.user.profile_image_url + '"><font style="color: black" size="5"> ' + obj.user.name + '</font>  <font style="color: grey" size="4">' + '@' + obj.user.screen_name + '. </font></a>  <font style="color: black" size="3"> Date: </font><font style="color: grey" size="3">' + obj.created_at + '</font></p>'
+							html += '<font style="color: black" size="5">Author: </font><a class="w3-btn" onclick="openpage(\'https://twitter.com/' + obj.user.screen_name + ' \')" ><img style="height:30px" src="' + obj.user.profile_image_url + '"><font style="color: black" size="5"> ' + obj.user.name + '</font><font style="color: grey" size="4">' + '@' + obj.user.screen_name + '. </font></a></p>'
 
-							// html += '<p>' + obj.user.screen_name + '</p>';
+							html += '<p><font style="color: black" size="3"> Date: </font><font style="color: grey" size="3">' + obj.created_at + '</font></p>';
 
 							html += '<p><font style="color: black" size="5"> Tweet: ' + obj.text + '</font></p>'
 
-							html += '<p><a href="*" class="link"><font size="4">' + obj.entities.hashtags + '</font></a></p>'
+							// for (var hashtag in obj.entities.hashtags) {
+							// html +='<p>' + obj.entities.hashtags[hashtag].Text + '</p>'
+							// }
 
 							html += '</div>'
 						}
@@ -100,6 +97,12 @@
 
 		var sendButton = document.getElementById('sendButton');
 		sendButton.onclick = sendData;
+
+		function openpage(url){
+			//window.location.replace(url);
+			window.open(url);
+		} 
+
 	</script>
 
 </body>
